Fix header z-index

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,7 +10,7 @@
 }
 
 .header-site {
-	z-index: 999;
+	z-index: 9;
 
 	.header-top {
 		background: $gray-light;
